probe-rs/src/gdb_server/target/desc/snapshots/probe_rs__gdb_server__target__desc__test__target_description_microbit.snap
---
source: probe-rs/src/gdb_server/target/desc/test.rs
expression: description
---
<?xml version="1.0"?>
        <!DOCTYPE target SYSTEM "gdb-target.dtd">
        <target version="1.0">
        <architecture>armv6-m</architecture></target>
